k8s/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  namespace: go-app
spec:
  selector:
    app: web-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
